k8s-deployment/configurator.yaml
kind: Service
apiVersion: v1
metadata:
  name: configuratorapp
  labels:
    app: configurator
spec:
  selector:
    app: configurator
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8088
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuratorapp
  labels:
    app: configurator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configurator
  template:
    metadata:
      labels:
        app: configurator
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "configuratorapp"
        dapr.io/app-port: "8088"
        dapr.io/log-level: "debug"
    spec:
      containers:
      - name: node
        image: bharatmalik/configurator:latest
        ports:
        - containerPort: 8088
        imagePullPolicy: Always
